Add script for success message

--- a/src/index.html
+++ b/src/index.html
@@ -8,6 +8,7 @@
 
 <body>
 <div id="contactForm" class="contactForm">
+  <h2 class="formHeader" id="formHeader">Feedback form</h2>
   <div id="formBody" class="formBody">
     <form action="" method="POST" name="contactForm">
       <div class="inputContainer">
