Add script for validation credit card

--- a/src/index.html
+++ b/src/index.html
@@ -21,6 +21,9 @@
         <input name="phone" id="phone" type="text" placeholder="0935647477"><span class="error-message"></span>
       </div>
       <div class="inputContainer">
+        <input name="card" id="card" type="text" placeholder="5675 6474 6376 4736"><span class="error-message"></span>
+      </div>
+      <div class="inputContainer">
         <textarea name="feedback" id="message" rows="10" placeholder="Enter your message"></textarea><span class="error-message"></span>
       </div>
       <input id="submitBtn" class="submitBtn" type="submit" value="Send">
