Add script for validation date

--- a/src/index.html
+++ b/src/index.html
@@ -24,6 +24,9 @@
         <input name="card" id="card" type="text" placeholder="5675 6474 6376 4736"><span class="error-message"></span>
       </div>
       <div class="inputContainer">
+        <input name="date" id="date" type="text" placeholder="12-10-2010"><span class="error-message"></span>
+      </div>
+      <div class="inputContainer">
         <textarea name="feedback" id="message" rows="10" placeholder="Enter your message"></textarea><span class="error-message"></span>
       </div>
       <input id="submitBtn" class="submitBtn" type="submit" value="Send">
